# trending_twitter_pyspark

./: notebook.ipynb  pyproject.toml
src/: pyproject.toml
src/trending_twitter_topics/: analysis.py  main.py  process_data.py
