[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trending_twitter_topics"
version = "0.0.1"
description = "My package"
readme = "README.md"
requires-python = ">~3.9"
dependencies = [
    "pandas >=1.4.4, < 2",
    "pyspark >= 3.3.0, < 4",
    "click >= 8.1.3, < 9" 
]